Access barriers are missing in C2 intrinsic for Base64

XMLWordPrintable

    • b29
    • Not verified

        New Base64 intrinsics code introduced by JDK-8205528 is missing GC interface accesses. This was found in Shenandoah CTW tests:
         https://mail.openjdk.java.net/pipermail/shenandoah-dev/2019-January/008790.html

        It can theoretically affect other GCs as well. C2 interface was introduced in 12, so both 12 and 13 are affected.

        Sample fix:
         http://cr.openjdk.java.net/~shade/shenandoah/fix-base64.patch

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: