8217467: Access barriers are missing in C2 intrinsic for Base64

Reviewed-by: thartmann, roland, rkennke, kvn